hphp/hack/test/typecheck/reactive/memoize_mutable3.php.exp
File "memoize_mutable3.php", line 4, characters 22-29:
Memoized functions cannot have mutable $this. (Parsing[1002])
